#!/usr/bin/env node
var b=e=>e==="MERGED"?null:e==="none"?"blocked":"waiting",s=["open","unknown"],P=e=>e.refTip===null?e.mergeSubjectFound||e.pr==="MERGED"?"merged":e.hostReach==="throttled"||e.hostReach==="secondary"||e.hostReach==="failed"?"unknown":"open":e.commitsAhead>0?e.realCommitsAhead===0?"claimed":e.pr==="MERGED"?"merged":"wip":e.refTip!==null&&e.refTip===e.mainTip?"open":"merged",l=e=>{if(e.deferredByPlan)return"deferred";let r=P(e);if(e.waits!==null&&s.includes(r)){let t=b(e.waits.pr);if(t!==null)return t}return r};import{realpathSync as S}from"node:fs";import{pathToFileURL as y}from"node:url";var p=10,h=e=>e==="OPEN"||e==="MERGED"||e==="CLOSED"?e:e==="NONE"?"none":"unreadable",w=e=>e==="ok"||e==="unasked"||e==="throttled"||e==="secondary"||e==="failed"?e:"failed",f=(e,r,t)=>{let n=Number(e);if(!Number.isInteger(n)||n<0)throw new Error(`line ${r}: ${t} is not a count: '${e}'`);return n},C=e=>d(e).map(r=>r.readings),d=e=>e.split(`
`).filter(r=>r!=="").map((r,t)=>{let n=r.split("	");if(n.length!==p)throw new Error(`line ${t+1}: expected ${p} tab-separated fields, got ${n.length}`);let[i,o,c,m,g,R,E,B,a,u]=n;return{readings:{deferredByPlan:i==="true",refTip:o==="-"?null:o,mainTip:c==="-"?null:c,mergeSubjectFound:m==="true",hostReach:w(g),pr:h(R),commitsAhead:f(E,t+1,"commitsAhead"),realCommitsAhead:f(B,t+1,"realCommitsAhead"),waits:a==="-"||u==="-"?null:{branch:a,pr:h(u)}},waitsBranch:a==="-"?"":a}}),T=e=>d(e).map(({readings:r,waitsBranch:t})=>{let n=l(r),i=t!==""&&r.waits===null&&s.includes(n)?"1":"0";return`${n}	${i}
`}).join(""),A=(e,r=t=>process.stdout.write(t))=>{try{return r(T(e)),0}catch(t){return process.stderr.write(`plot-branch-state: ${t.message}
`),2}};if(process.argv[1]&&import.meta.url===y(S(process.argv[1])).href){let e=[];for await(let r of process.stdin)e.push(r);process.exit(A(Buffer.concat(e).toString("utf8")))}export{T as answer,C as readingsFrom,A as run};
